tests/NormalTests/paczka1/fuzzy1/95905910.err
Error in line 9: 1QNN S494 68,0
Error in line 10: khuJpvJ S494 62,9
Error in line 19: khuJpvJ A251 21,8
Error in line 31: 1QNN A811 15,6
Error in line 35: ehH6RPIrxfI A811 14,2
Error in line 34: 1QNN S494 57,8
